refactor(forestry):优化木材配方中的列表转换方式- 将 EnumForestryWoodType 的名称列表转换方式从 toList() 改为 collect(Collectors.toList()) - 将 EnumVanillaWoodType 的名称列表转换方式从 toList() 改为 collect(Collectors.toList()) - 统一使用 Collectors.toList() 以确保更好的兼容性和可读性